--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.13",
+    "react-video-js-player": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
